# projeto-gestao-pessoas-exec-federal

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: CI.yml
app/extract/: contract.py  delete_all_files.py  extract_all_data.py  extract_as_csv.py  main_extracao_full.py  main_extracao_ultimo_mes.py
app/extract/extracao_etapas/: adicionar_metadados_salvar.py  contract.py  extrair_dados_arquivos.py  limpar_diretorio.py  verificar_links.py
app/load/: carrega_config_ambiente.py
app/transform/: analise.py  insert_dim_orgao.py  main_transform.py  merge_all_files.py
app/transform/transform_etapas/: converter_data.py  merge_all_files.py  preencher_nulos.py
data/: 201601.csv  201602.csv  201603.csv  201604.csv  201605.csv  201607.csv  201608.csv  201609.csv  202003.csv  202004.csv  202005.csv  202006.csv  202007.csv  202008.csv  202009.csv  202010.csv  202011.csv  202012.csv  202101.csv  202102.csv  202103.csv  202104.csv  202105.csv  202106.csv  202107.csv  LotOrgao_DistOcupVagas%20-%20201601.csv  resultados_acesso_full.json
docs/: index.md
sql/: create_table_dim_calendario.sql  create_table_dim_cargo.sql  create_table_dim_orgao.sql  create_table_ft_cargos.sql
tests/: test_contract.py  test_extract_all_data.py  test_func_extract_as_csv.py  test_limpar_diretorio.py  test_transform_etapas.py  test_verificar_links.py
